# nnwidget

./: .nojekyll  README.md  about.html  robots.txt  search.json  setup.cfg  sitemap.xml
api/: bar.baz.html  foo.html  index.html
conda-build/: meta.yaml
docs/: _quarto.yml  about.qmd  objects.json  objects.txt
docs/api/: bar.baz.qmd  foo.qmd  index.qmd
docs/pages/: overview.qmd
nnwidgets/: __init__.py
pages/: advanced.html  basics.html  examples.html  overview.html  something.html
